--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, 'Help')	%>
+<h1>Help</h1>
+	<p>This page tells you how to use the app and so on.</p>
+	<p><a href="http://railstutorial.org/help">For more help go here</a></p>
+</body>
+</html>
