--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,33 @@
-<div class="center hero-unit">
-<h1>Welcome to the Sample App</h1>
-<p>This is the home page for the Sample App from 
-	<a href=http://www.railstutorial.org/>Railstutorial.org</a></p>
-<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-</div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<% if signed_in? %>
+
+	<div class="row">
+		<aside class="span4">
+			<section>
+				<%= render 'shared/user_info' %>
+			</section>
+			<section>
+				<%= render 'shared/micropost_form' %>
+			</section>
+		</aside>
+		<div class="span8">
+				<h3>Micropost feed</h3>
+				<%= render 'shared/feed' %>
+		</div>
+	</div>
+
+
+<% else %>
+
+	<div class="center hero-unit">
+	<h1>Welcome to the Sample App</h1>
+	<p>This is the home page for the Sample App from 
+		<a href=http://www.railstutorial.org/>Railstutorial.org</a></p>
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+	</div>
+
+	<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+
+
+
+<% end %> 
